--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "test": "grunt test"
   },
   "dependencies": {
-    "grunt-lib-contrib": "~0.3.0"
+    "grunt-lib-contrib": "~0.3.0",
+    "typescript": "~0.8.0"
   },
   "devDependencies": {
     "grunt": "~0.3.15",
