--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "grunt-type",
   "description": "Compile TypeScript files to JavaScript.",
-  "version": "0.8.1",
+  "version": "0.9.0",
   "homepage": "https://github.com/alvivi/grunt-type",
   "author": {
     "name": "Álvaro Vilanova Vidal",
-    "email": "alvivi@alvivi.com"
+    "url": "alvivi@gmail.com"
   },
   "repository": {
     "type": "git",
@@ -20,20 +20,21 @@
       "url": "https://github.com/alvivi/grunt-type/blob/master/LICENSE"
     }
   ],
-  "main": "grunt.js",
+  "main": "Gruntfile.js",
   "engines": {
     "node": ">= 0.8.0"
   },
   "scripts": {
     "test": "grunt test"
   },
-  "dependencies": {
-    "grunt-lib-contrib": "~0.3.0",
-    "typescript": "~0.8.0"
-  },
   "devDependencies": {
-    "grunt": "~0.3.15",
-    "grunt-contrib-clean": "~0.3.0"
+    "grunt": "~0.4.0",
+    "grunt-contrib-jshint": "~0.4.3",
+    "grunt-contrib-nodeunit": "~0.1.2",
+    "grunt-contrib-clean": "~0.4.1"
+  },
+  "peerDependencies": {
+    "grunt": "~0.4.0"
   },
   "keywords": [
     "gruntplugin"
