--- a/package.json
+++ b/package.json
@@ -40,6 +40,6 @@
     "gruntplugin"
   ],
   "dependencies": {
-    "typescript": "~0.9.0"
+    "typescript": "git://github.com/alvivi/TypeScript-0.9.0a.git"
   }
 }
